--- a/index.html
+++ b/index.html
@@ -19,18 +19,136 @@
       <a href="#">CREATE YOUR PLAN</a>
     </nav>
   </header>
+
   <section class="hero">
-    <div class="hero-content">
-      <h1>Great coffee<br>made simple.</h1>
-      <p>
-        Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters
+  <div class="hero_content">
+    <h1>Great coffee<br />made simple.</h1>
+    <p>
+      Start your mornings with the world’s best coffees. Try our <br>
+       expertly curated artisan coffees from our best roasters <br>
         delivered directly to your door, at your schedule.
+    </p>
+    <a href="#" class="btn">Create your plan</a>
+  </div>
+  <div class="hero_image"></div>
+</section>
+
+<section class="collection">
+  <h2 class="collection_bg_text">our collection</h2>
+
+  <div class="collection-items">
+    <div class="item">
+      <img src="./imegs/kopi1 copy@2x.png" alt="Gran Espresso" />
+      <h3>Gran Espresso</h3>
+      <p>Light and flavorful blend with cocoa and black pepper for an intense experience</p>
+    </div>
+
+    <div class="item">
+      <img src="./imegs/kopi1 copy@2x.png" alt="Planalto" />
+      <h3>Planalto</h3>
+      <p>Brazilian dark roast with rich and velvety body, and hints of fruits and nuts</p>
+    </div>
+
+    <div class="item">
+      <img src="./imegs/kopi1 copy@2x.png" alt="Piccollo" />
+      <h3>Piccollo</h3>
+      <p>Mild and smooth blend featuring notes of toasted almond and dried cherry</p>
+    </div>
+
+    <div class="item">
+      <img src="./imegs/kopi1 copy@2x.png" alt="Danche" />
+      <h3>Danche</h3>
+      <p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes</p>
+    </div>
+  </div>
+</section>
+
+  <section class="why-choose-us">
+    <div class="container">
+      <h2>Why choose us?</h2>
+      <p class="description">
+        A large part of our role is choosing which particular coffees will be featured
+        in our range. This means working closely with the best coffee growers to give
+        you a more impactful experience on every level.
+      </p>
+      <div class="features">
+        <div class="card">
+          <div class="icon"> <img src="/imegs/Shape.png" alt=""></div>
+          <h3>Best quality</h3>
+          <p>Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+        </div>
+        <div class="card">
+          <div class="icon"> <img src="/imegs/Combined Shape.png" alt=""></div>
+          <h3>Exclusive benefits</h3>
+          <p>Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+        </div>
+        <div class="card">
+          <div class="icon"> <img src="/imegs/Combined Shape (1).png" alt=""></div>
+          <h3>Free shipping</h3>
+          <p>We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="how-it-works">
+  <h2>How it works</h2>
+
+  <div class="steps-line">
+    <div class="line"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+  </div>
+
+  <div class="steps">
+    <div class="step">
+      <h3 class="number">01</h3>
+      <h4 class="title">Pick your coffee</h4>
+      <p class="desc">
+        Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.
       </p>
       <a href="#" class="btn">Create your plan</a>
     </div>
-    <div class="hero-image">
-      <img src="./imegs/Bitmap.png" alt="Coffee press image">
+
+    <div class="step">
+      <h3 class="number">02</h3>
+      <h4 class="title">Choose the frequency</h4>
+      <p class="desc">
+        Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.
+      </p>
     </div>
-  </section>
+
+    <div class="step">
+      <h3 class="number">03</h3>
+      <h4 class="title">Receive and enjoy!</h4>
+      <p class="desc">
+        We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.
+      </p>
+    </div>
+  </div>
+</section>
+
+
+<footer class="main-footer">
+    <div class="container">
+      <div class="logo">
+        <img src="/imegs/Group5(1).png" alt="coffee roasters logo" />
+      
+      </div>
+
+      <nav class="footer-nav">
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Create Your Plan</a>
+      </nav>
+
+      <div class="social-icons">
+        <a href="#"><img src="/imegs/Path.png" alt="Facebook"></a>
+        <a href="#"><img src= "/imegs/Path (1).png" alt="Twitter"></a>
+        <a href="#"><img src="/imegs/Shape (1).png" alt="Instagram"></a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
