--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
       <div class="social-icons">
         <a href="#"><img src="/imegs/Path.png" alt="Facebook"></a>
-        <a href="#"><img src= "/imegs/Path (1).png" alt="Twitter"></a>
+        <a href="/page/about_page.html"><img src= "/imegs/Path (1).png" alt="Twitter"></a>
         <a href="#"><img src="/imegs/Shape (1).png" alt="Instagram"></a>
       </div>
     </div>
